--- a/messages/bn_BD/LC_MESSAGES/639-2.po
+++ b/messages/bn_BD/LC_MESSAGES/639-2.po
@@ -5,14 +5,14 @@
 # This file is distributed under the same license as the iso-codes package.
 #
 # Copyright ©
-# Oymate <dhruboadittya96@gmail.com>, 2020.
+# Oymate <dhruboadittya96@gmail.com>, 2020, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_639-2\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2020-11-30 11:29+0000\n"
+"PO-Revision-Date: 2021-01-29 08:32+0000\n"
 "Last-Translator: Oymate <dhruboadittya96@gmail.com>\n"
 "Language-Team: Bengali (Bangladesh) <https://hosted.weblate.org/projects/"
 "iso-codes/iso-639-2/bn_BD/>\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.4-dev\n"
+"X-Generator: Weblate 4.5-dev\n"
 
 #. Name for aar
 msgid "Afar"
@@ -301,7 +301,7 @@ msgstr ""
 
 #. Name for cau
 msgid "Caucasian languages"
-msgstr ""
+msgstr "ককেসীয় ভাষা"
 
 #. Name for ceb
 msgid "Cebuano"
@@ -309,7 +309,7 @@ msgstr ""
 
 #. Name for cel
 msgid "Celtic languages"
-msgstr ""
+msgstr "সেলটিক ভাষা"
 
 #. Name for ces
 msgid "Czech"
@@ -369,7 +369,7 @@ msgstr ""
 
 #. Name for cmc
 msgid "Chamic languages"
-msgstr ""
+msgstr "চামিক ভাষা"
 
 #. Name for cop
 msgid "Coptic"
@@ -801,7 +801,7 @@ msgstr ""
 
 #. Name for ine
 msgid "Indo-European languages"
-msgstr ""
+msgstr "ইন্দো-ইউরোপীয় ভাষা"
 
 #. Name for inh
 msgid "Ingush"
@@ -813,7 +813,7 @@ msgstr ""
 
 #. Name for ira
 msgid "Iranian languages"
-msgstr ""
+msgstr "ইরানীয় ভাষা"
 
 #. Name for iro
 msgid "Iroquoian languages"
