--- a/messages/bn_BD/LC_MESSAGES/639-5.po
+++ b/messages/bn_BD/LC_MESSAGES/639-5.po
@@ -5,14 +5,14 @@
 # This file is distributed under the same license as the iso-codes package.
 #
 # Copyright ©
-# Oymate <dhruboadittya96@gmail.com>, 2020.
+# Oymate <dhruboadittya96@gmail.com>, 2020, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_639-5\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2020-11-30 11:29+0000\n"
+"PO-Revision-Date: 2021-01-29 08:32+0000\n"
 "Last-Translator: Oymate <dhruboadittya96@gmail.com>\n"
 "Language-Team: Bengali (Bangladesh) <https://hosted.weblate.org/projects/"
 "iso-codes/iso-639-5/bn_BD/>\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.4-dev\n"
+"X-Generator: Weblate 4.5-dev\n"
 
 #. Name for aav
 msgid "Austro-Asiatic languages"
@@ -109,11 +109,11 @@ msgstr ""
 
 #. Name for cau
 msgid "Caucasian languages"
-msgstr ""
+msgstr "ককেসীয় ভাষা"
 
 #. Name for cba
 msgid "Chibchan languages"
-msgstr ""
+msgstr "চিবচান ভাষা"
 
 #. Name for ccn
 msgid "North Caucasian languages"
@@ -125,19 +125,19 @@ msgstr ""
 
 #. Name for cdc
 msgid "Chadic languages"
-msgstr ""
+msgstr "চাডিক ভাষা"
 
 #. Name for cdd
 msgid "Caddoan languages"
-msgstr ""
+msgstr "ক্যাডোন ভাষা"
 
 #. Name for cel
 msgid "Celtic languages"
-msgstr ""
+msgstr "সেলটিক ভাষা"
 
 #. Name for cmc
 msgid "Chamic languages"
-msgstr ""
+msgstr "চামিক ভাষা"
 
 #. Name for cpe
 msgid "Creoles and pidgins, English‑based"
@@ -241,11 +241,11 @@ msgstr ""
 
 #. Name for ine
 msgid "Indo-European languages"
-msgstr ""
+msgstr "ইন্দো-ইউরোপীয় ভাষা"
 
 #. Name for ira
 msgid "Iranian languages"
-msgstr ""
+msgstr "ইরানীয় ভাষা"
 
 #. Name for iro
 msgid "Iroquoian languages"
