--- a/messages/et/LC_MESSAGES/3166-2.po
+++ b/messages/et/LC_MESSAGES/3166-2.po
@@ -5,14 +5,16 @@
 # This file is distributed under the same license as the iso-codes package.
 # .
 # Copyright ©
+# Kristjan Räts <kristjanrats@gmail.com>, 2021.
+# Janar Leas <janar.leas@gmail.com>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_3166-2\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2020-05-19 14:57+0200\n"
-"PO-Revision-Date: 2018-01-31 19:36+0000\n"
-"Last-Translator: Kristjan Räts <kristjanrats@gmail.com>\n"
+"PO-Revision-Date: 2021-02-01 13:41+0000\n"
+"Last-Translator: Janar Leas <janar.leas@gmail.com>\n"
 "Language-Team: Estonian <https://hosted.weblate.org/projects/iso-codes/"
 "iso-3166-2/et/>\n"
 "Language: et\n"
@@ -20,7 +22,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 2.19-dev\n"
+"X-Generator: Weblate 4.5-dev\n"
 
 #. Name for AD-02
 msgid "Canillo"
@@ -7699,10 +7701,8 @@ msgid "Sikkim"
 msgstr "Sikkim"
 
 #. Name for IN-TG
-#, fuzzy
-#| msgid "Pangasinan"
 msgid "Telangana"
-msgstr "pangasinani"
+msgstr "telangana"
 
 #. Name for IN-TN
 msgid "Tamil Nadu"
@@ -8745,10 +8745,8 @@ msgid "Okinawa"
 msgstr ""
 
 #. Name for KE-01
-#, fuzzy
-#| msgid "Bari"
 msgid "Baringo"
-msgstr "bari"
+msgstr "baringo"
 
 #. Name for KE-02
 msgid "Bomet"
