--- a/messages/et/LC_MESSAGES/639-3.po
+++ b/messages/et/LC_MESSAGES/639-3.po
@@ -10,15 +10,15 @@
 # Tõivo Leedjärv <leedjarv@interest.ee>, 2000-2001.
 # Kristjan Räts <kristjanrats@gmail.com>, 2018, 2021.
 # Mihkel Tõnnov <mihhkel@gmail.com>, 2019.
-# Janar Leas <janar.leas@gmail.com>, 2020.
+# Janar Leas <janar.leas@gmail.com>, 2020, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_639-3\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2021-01-18 09:32+0000\n"
-"Last-Translator: Kristjan Räts <kristjanrats@gmail.com>\n"
+"PO-Revision-Date: 2021-02-01 13:41+0000\n"
+"Last-Translator: Janar Leas <janar.leas@gmail.com>\n"
 "Language-Team: Estonian <https://hosted.weblate.org/projects/iso-codes/"
 "iso-639-3/et/>\n"
 "Language: et\n"
@@ -494,9 +494,8 @@ msgid "Saidi Arabic"
 msgstr ""
 
 #. Inverted name for aec
-#, fuzzy
 msgid "Arabic, Saidi"
-msgstr "Araabia"
+msgstr "Araabia, ülem-egiptuse"
 
 #. Name for aed
 msgid "Argentine Sign Language"
@@ -559,9 +558,8 @@ msgid "Aeka"
 msgstr ""
 
 #. Name for afb
-#, fuzzy
 msgid "Gulf Arabic"
-msgstr "Araabia"
+msgstr "Ida-Araabia"
 
 #. Inverted name for afb
 #, fuzzy
