--- a/messages/eu/LC_MESSAGES/4217.po
+++ b/messages/eu/LC_MESSAGES/4217.po
@@ -4,75 +4,75 @@
 # This file is distributed under the same license as the iso-codes package.
 #
 # Copyright ©
-# Oymate <dhruboadittya96@gmail.com>, 2020, 2021.
+# Gontzal Manuel Pujana Onaindia <thadahdenyse@gmail.com>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_4217\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2021-01-29 08:32+0000\n"
-"Last-Translator: Oymate <dhruboadittya96@gmail.com>\n"
-"Language-Team: Bengali <https://hosted.weblate.org/projects/iso-codes/"
-"iso-4217/bn/>\n"
-"Language: bn\n"
+"PO-Revision-Date: 2021-01-27 09:32+0000\n"
+"Last-Translator: Gontzal Manuel Pujana Onaindia <thadahdenyse@gmail.com>\n"
+"Language-Team: Basque <https://hosted.weblate.org/projects/iso-codes/"
+"iso-4217/eu/>\n"
+"Language: eu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n > 1;\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 4.5-dev\n"
 
 #. Name for AED
 msgid "UAE Dirham"
-msgstr "সংযুক্ত আরব আমিরাত দিরহাম"
+msgstr "Arabiar Emirerri Batuetako Dirham"
 
 #. Name for AFN
 msgid "Afghani"
-msgstr "আফগানি"
+msgstr ""
 
 #. Name for ALL
 msgid "Lek"
-msgstr "লেক"
+msgstr "Lek"
 
 #. Name for AMD
 msgid "Armenian Dram"
-msgstr "আর্মেনিয়ান ড্রাম"
+msgstr "Dram armeniarra"
 
 #. Name for ANG
 msgid "Netherlands Antillean Guilder"
-msgstr "নেদারল্যান্ডস অ্যান্টিলিয়ান গিল্ডার"
+msgstr ""
 
 #. Name for AOA
 msgid "Kwanza"
-msgstr "কুয়ানজা"
+msgstr "Kwanza"
 
 #. Name for ARS
 msgid "Argentine Peso"
-msgstr "আর্জেন্টাইন পেসো"
+msgstr "Peso argentinarra"
 
 #. Name for AUD
 msgid "Australian Dollar"
-msgstr "অস্ট্রেলিয়ান ডলার"
+msgstr "Dolar australiarra"
 
 #. Name for AWG
 msgid "Aruban Florin"
-msgstr "আরুবান ফ্লোরিন"
+msgstr ""
 
 #. Name for AZN
 msgid "Azerbaijanian Manat"
-msgstr "আজারবাইজানিয় মানত"
+msgstr ""
 
 #. Name for BAM
 msgid "Convertible Mark"
-msgstr "রূপান্তরযোগ্য চিহ্ন"
+msgstr ""
 
 #. Name for BBD
 msgid "Barbados Dollar"
-msgstr "বার্বাডোস ডলার"
+msgstr ""
 
 #. Name for BDT
 msgid "Taka"
-msgstr "টাকা"
+msgstr "Taka"
 
 #. Name for BGN
 msgid "Bulgarian Lev"
@@ -464,7 +464,7 @@ msgstr ""
 
 #. Name for PYG
 msgid "Guarani"
-msgstr "গুয়ারানি"
+msgstr ""
 
 #. Name for QAR
 msgid "Qatari Rial"
