--- a/messages/eu/LC_MESSAGES/639-3.po
+++ b/messages/eu/LC_MESSAGES/639-3.po
@@ -9,7 +9,7 @@
 # Alastair McKinstry <mckinstry@debian.org>, 2002.
 # Mikel Olasagasti Uranga <mikel@olasagasti.info>, 2017.
 # Osoitz <oelkoro@gmail.com>, 2019.
-# Gontzal Manuel Pujana Onaindia <thadahdenyse@gmail.com>, 2020.
+# Gontzal Manuel Pujana Onaindia <thadahdenyse@gmail.com>, 2020, 2021.
 # Gorka Azkarate Zubiaur <gorkaazkarate@gmail.com>, 2020.
 msgid ""
 msgstr ""
@@ -17,8 +17,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2020-11-24 13:29+0000\n"
-"Last-Translator: Gorka Azkarate Zubiaur <gorkaazkarate@gmail.com>\n"
+"PO-Revision-Date: 2021-01-27 09:32+0000\n"
+"Last-Translator: Gontzal Manuel Pujana Onaindia <thadahdenyse@gmail.com>\n"
 "Language-Team: Basque <https://hosted.weblate.org/projects/iso-codes/"
 "iso-639-3/eu/>\n"
 "Language: eu\n"
@@ -26,7 +26,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.4-dev\n"
+"X-Generator: Weblate 4.5-dev\n"
 "X-Bugs: Report translation errors to the Language-Team address.\n"
 
 #. Name for aaa
@@ -39,11 +39,11 @@ msgstr "alumu-tesu"
 
 #. Name for aac
 msgid "Ari"
-msgstr ""
+msgstr "Ari"
 
 #. Name for aad
 msgid "Amal"
-msgstr ""
+msgstr "Amal"
 
 #. Name for aae
 msgid "Arbëreshë Albanian"
