--- a/messages/hr/LC_MESSAGES/15924.po
+++ b/messages/hr/LC_MESSAGES/15924.po
@@ -5,14 +5,14 @@
 # .
 # Copyright ©
 # gogogogi <trebelnik2@gmail.com>, 2019.
-# Milo Ivir <mail@milotype.de>, 2019, 2020.
+# Milo Ivir <mail@milotype.de>, 2019, 2020, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_15924\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2020-08-23 21:36+0000\n"
+"PO-Revision-Date: 2021-01-25 17:32+0000\n"
 "Last-Translator: Milo Ivir <mail@milotype.de>\n"
 "Language-Team: Croatian <https://hosted.weblate.org/projects/iso-codes/"
 "iso-15924/hr/>\n"
@@ -22,7 +22,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 4.2.1-dev\n"
+"X-Generator: Weblate 4.5-dev\n"
 
 #. Name for Adlm
 msgid "Adlam"
@@ -610,7 +610,7 @@ msgstr "Sora Sompeng"
 
 #. Name for Sund
 msgid "Sundanese"
-msgstr "Sudansko"
+msgstr "Sundansko"
 
 #. Name for Sylo
 msgid "Syloti Nagri"
