--- a/messages/hr/LC_MESSAGES/639-2.po
+++ b/messages/hr/LC_MESSAGES/639-2.po
@@ -9,14 +9,14 @@
 # Alastair McKinstry <mckinstry@debian.org>, 2001.
 # Tomislav Krznar <tomislav.krznar@gmail.com>, 2012-2013.
 # gogogogi <trebelnik2@gmail.com>, 2019.
-# Milo Ivir <mail@milotype.de>, 2019, 2020.
+# Milo Ivir <mail@milotype.de>, 2019, 2020, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_639-2\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2020-11-05 11:27+0000\n"
+"PO-Revision-Date: 2021-01-25 17:32+0000\n"
 "Last-Translator: Milo Ivir <mail@milotype.de>\n"
 "Language-Team: Croatian <https://hosted.weblate.org/projects/iso-codes/"
 "iso-639-2/hr/>\n"
@@ -26,7 +26,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 4.3.2-dev\n"
+"X-Generator: Weblate 4.5-dev\n"
 
 #. Name for aar
 msgid "Afar"
@@ -1675,7 +1675,7 @@ msgstr ""
 
 #. Name for sun
 msgid "Sundanese"
-msgstr "Sudanski"
+msgstr "Sundansko"
 
 #. Name for sus
 msgid "Susu"
