--- a/messages/fur/LC_MESSAGES/3166-3.po
+++ b/messages/fur/LC_MESSAGES/3166-3.po
@@ -12,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2021-01-10 13:32+0000\n"
+"PO-Revision-Date: 2021-02-03 11:42+0000\n"
 "Last-Translator: Fabio Tomat <f.t.public@gmail.com>\n"
 "Language-Team: Friulian <https://hosted.weblate.org/projects/iso-codes/"
 "iso-3166-3/fur/>\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.4.1-dev\n"
+"X-Generator: Weblate 4.5-dev\n"
 
 #. Name for AIDJ
 msgid "French Afars and Issas"
@@ -65,7 +65,7 @@ msgstr ""
 
 #. Name for FQHH
 msgid "French Southern and Antarctic Territories"
-msgstr ""
+msgstr "Teritoris austrâi francês"
 
 #. Name for FXFR
 msgid "France, Metropolitan"
