--- a/messages/sr/LC_MESSAGES/639-3.po
+++ b/messages/sr/LC_MESSAGES/639-3.po
@@ -7,23 +7,24 @@
 # Copyright ©
 # Danilo Segan <dsegan@gmx.net>, 2003-2005.
 # Branko Kovačević <ja_sam_branko@yahoo.com>, 2018-2019.
+# Слободан Симић(Slobodan Simić) <slsimic@gmail.com>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_639-3\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2019-10-05 09:56+0000\n"
-"Last-Translator: Branko Kovačević <ja_sam_branko@yahoo.com>\n"
-"Language-Team: Serbian (latin) <https://hosted.weblate.org/projects/iso-"
-"codes/iso-639-3/sr_Latn/>\n"
+"PO-Revision-Date: 2021-02-03 11:41+0000\n"
+"Last-Translator: Слободан Симић(Slobodan Simić) <slsimic@gmail.com>\n"
+"Language-Team: Serbian <https://hosted.weblate.org/projects/iso-codes/"
+"iso-639-3/sr/>\n"
 "Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 3.9-dev\n"
+"X-Generator: Weblate 4.5-dev\n"
 
 #. Name for aaa
 msgid "Ghotuo"
@@ -10890,9 +10891,8 @@ msgid "Dari, Zoroastrian"
 msgstr ""
 
 #. Name for gcc
-#, fuzzy
 msgid "Mali"
-msgstr "мари"
+msgstr "Мали"
 
 #. Name for gcd
 #, fuzzy
