--- a/messages/lt/LC_MESSAGES/639-3.po
+++ b/messages/lt/LC_MESSAGES/639-3.po
@@ -8,19 +8,25 @@
 # Alastair McKinstry <mckinstry@debian.org>, 2001.
 # Gediminas Paulauskas <menesis@delfi.lt>, 2000-2001.
 # Kęstutis Biliūnas <kebil@kaunas.init.lt>, 2004, 2009.
+# Kornelijus Tvarijanavičius <kornelitvari@protonmail.com>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_639-3\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2009-04-14 11:56+0300\n"
-"Last-Translator: Kęstutis Biliūnas <kebil@kaunas.init.lt>\n"
-"Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
+"PO-Revision-Date: 2021-02-21 22:09+0000\n"
+"Last-Translator: Kornelijus Tvarijanavičius <kornelitvari@protonmail.com>\n"
+"Language-Team: Lithuanian <https://hosted.weblate.org/projects/iso-codes/"
+"iso-639-3/lt/>\n"
 "Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n % 10 == 1 && (n % 100 < 11 || n % 100 > "
+"19)) ? 0 : ((n % 10 >= 2 && n % 10 <= 9 && (n % 100 < 11 || n % 100 > 19)) ? "
+"1 : 2);\n"
+"X-Generator: Weblate 4.5\n"
 
 #. Name for aaa
 msgid "Ghotuo"
@@ -13521,7 +13527,7 @@ msgstr "Kašmyrų"
 
 #. Name for kat
 msgid "Georgian"
-msgstr "Gruzinų"
+msgstr "Kartvelų"
 
 #. Name for kau
 msgid "Kanuri"
@@ -23521,13 +23527,12 @@ msgid "Ogbah"
 msgstr ""
 
 #. Name for oge
-#, fuzzy
 msgid "Old Georgian"
-msgstr "Gruzinų"
+msgstr "Senovės Kartvelų"
 
 #. Inverted name for oge
 msgid "Georgian, Old"
-msgstr "Gruzinų, senoji"
+msgstr "Kartvelų, Senoji"
 
 #. Name for ogg
 msgid "Ogbogolo"
