--- a/messages/fur/LC_MESSAGES/639-2.po
+++ b/messages/fur/LC_MESSAGES/639-2.po
@@ -359,7 +359,9 @@ msgid "Cherokee"
 msgstr "Cherokee"
 
 #. Name for chu
-msgid "Church Slavic; Old Slavonic; Church Slavonic; Old Bulgarian; Old Church Slavonic"
+msgid ""
+"Church Slavic; Old Slavonic; Church Slavonic; Old Bulgarian; Old Church "
+"Slavonic"
 msgstr "Slâf eclesiastic; Slâf antîc; Bulgar antîc; Slâf eclesiastic antîc"
 
 #. Name for chv
