--- a/messages/sr@latin/LC_MESSAGES/3166-1.po
+++ b/messages/sr@latin/LC_MESSAGES/3166-1.po
@@ -9,21 +9,24 @@
 # Milos Komarcevic <kmilos@gmail.com>, 2009.
 # Aleksandar Jelenak <aleksandar.jelenak@gmail.com>, 2012.
 # Miroslav Nikolić <miroslavnikolic@rocketmail.com>, 2014-2015.
+# Slobodan Simić(Slobodan Simić) <slsimic@gmail.com>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_3166-1\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2019-03-20 13:20+0100\n"
-"PO-Revision-Date: 2015-12-26 21:20+0200\n"
-"Last-Translator: Miroslav Nikolić <miroslavnikolic@rocketmail.com>\n"
-"Language-Team: Serbian <(nothing)>\n"
+"PO-Revision-Date: 2021-02-03 11:41+0000\n"
+"Last-Translator: Slobodan Simić(Slobodan Simić) <slsimic@gmail.com>\n"
+"Language-Team: Serbian <https://hosted.weblate.org/projects/iso-codes/"
+"iso-3166-1/sr/>\n"
 "Language: sr@latin\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"X-Generator: Weblate 4.5-dev\n"
 
 #. Name for ABW
 msgid "Aruba"
@@ -350,14 +353,10 @@ msgid "Union of the Comoros"
 msgstr "Zajednica Komora"
 
 #. Name for CPV
-#, fuzzy
-#| msgid "Cape Verde"
 msgid "Cabo Verde"
 msgstr "Zelenortska ostrva"
 
 #. Official name for CPV
-#, fuzzy
-#| msgid "Republic of Cape Verde"
 msgid "Republic of Cabo Verde"
 msgstr "Republika Zelenortska ostrva"
 
@@ -399,7 +398,7 @@ msgstr "Republika Kipar"
 
 #. Name for CZE
 msgid "Czechia"
-msgstr ""
+msgstr "Češka"
 
 #. Official name for CZE
 msgid "Czech Republic"
@@ -587,17 +586,15 @@ msgstr "Republika Gvineja"
 
 #. Name for GLP
 msgid "Guadeloupe"
-msgstr "Gvadalupa"
+msgstr "Gvadalupe"
 
 #. Name for GMB
 msgid "Gambia"
 msgstr "Gambija"
 
 #. Official name for GMB
-#, fuzzy
-#| msgid "Republic of Zambia"
 msgid "Republic of the Gambia"
-msgstr "Republika Zambija"
+msgstr "Republika Gambija"
 
 #. Name for GNB
 msgid "Guinea-Bissau"
@@ -988,16 +985,12 @@ msgid "Republic of the Marshall Islands"
 msgstr "Republika Maršalska ostrva"
 
 #. Name for MKD
-#, fuzzy
-#| msgid "New Caledonia"
 msgid "North Macedonia"
-msgstr "Nova Kaledonija"
+msgstr "Severna Makedonija"
 
 #. Official name for MKD
-#, fuzzy
-#| msgid "Republic of Lithuania"
 msgid "Republic of North Macedonia"
-msgstr "Republika Litvanija"
+msgstr "Republika Severna Makedonija"
 
 #. Name for MLI
 msgid "Mali"
@@ -1033,7 +1026,7 @@ msgstr "Mongolija"
 
 #. Name for MNP
 msgid "Northern Mariana Islands"
-msgstr "Ostrva Severna Marijana"
+msgstr "Severna Marijanska ostrva"
 
 #. Official name for MNP
 msgid "Commonwealth of the Northern Mariana Islands"
@@ -1445,13 +1438,11 @@ msgstr "Kraljevina Švedska"
 
 #. Name for SWZ
 msgid "Eswatini"
-msgstr ""
+msgstr "Esvatini"
 
 #. Official name for SWZ
-#, fuzzy
-#| msgid "Kingdom of Spain"
 msgid "Kingdom of Eswatini"
-msgstr "Kraljevina Španija"
+msgstr "Kraljevina Esvatini"
 
 #. Name for SXM, Official name for SXM
 msgid "Sint Maarten (Dutch part)"
@@ -1591,7 +1582,7 @@ msgstr "Ukrajina"
 
 #. Name for UMI
 msgid "United States Minor Outlying Islands"
-msgstr "Manja Spoljašnja Ostrva Sjedinjenih Država"
+msgstr "Spoljna ivična ostrva SAD"
 
 #. Name for URY
 msgid "Uruguay"
@@ -1647,7 +1638,7 @@ msgstr "Britanska Devičanska ostrva"
 
 #. Name for VIR
 msgid "Virgin Islands, U.S."
-msgstr "Devičanska ostrva, Američka"
+msgstr "Devičanska ostrva, SAD"
 
 #. Official name for VIR
 msgid "Virgin Islands of the United States"
@@ -1662,8 +1653,6 @@ msgid "Socialist Republic of Viet Nam"
 msgstr "Socijalistička Republika Vijetnam"
 
 #. Common name for VNM
-#, fuzzy
-#| msgid "Viet Nam"
 msgid "Vietnam"
 msgstr "Vijetnam"
 
