--- a/messages/sr@latin/LC_MESSAGES/3166-3.po
+++ b/messages/sr@latin/LC_MESSAGES/3166-3.po
@@ -9,6 +9,7 @@
 # Milos Komarcevic <kmilos@gmail.com>, 2009.
 # Aleksandar Jelenak <aleksandar.jelenak@gmail.com>, 2012.
 # Miroslav Nikolić <miroslavnikolic@rocketmail.com>, 2014-2015.
+# Slobodan Simić(Slobodan Simić) <slsimic@gmail.com>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_3166-3\n"
