--- a/messages/bn_BD/LC_MESSAGES/639-2.po
+++ b/messages/bn_BD/LC_MESSAGES/639-2.po
@@ -14,8 +14,8 @@ msgstr ""
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
 "PO-Revision-Date: 2021-01-29 08:32+0000\n"
 "Last-Translator: Oymate <dhruboadittya96@gmail.com>\n"
-"Language-Team: Bengali (Bangladesh) <https://hosted.weblate.org/projects/"
-"iso-codes/iso-639-2/bn_BD/>\n"
+"Language-Team: Bengali (Bangladesh) <https://hosted.weblate.org/projects/iso-"
+"codes/iso-639-2/bn_BD/>\n"
 "Language: bn_BD\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -356,7 +356,9 @@ msgid "Cherokee"
 msgstr ""
 
 #. Name for chu
-msgid "Church Slavic; Old Slavonic; Church Slavonic; Old Bulgarian; Old Church Slavonic"
+msgid ""
+"Church Slavic; Old Slavonic; Church Slavonic; Old Bulgarian; Old Church "
+"Slavonic"
 msgstr ""
 
 #. Name for chv
