--- a/messages/ckb/LC_MESSAGES/3166-1.po
+++ b/messages/ckb/LC_MESSAGES/3166-1.po
@@ -14,8 +14,8 @@ msgstr ""
 "POT-Creation-Date: 2019-03-20 13:20+0100\n"
 "PO-Revision-Date: 2020-06-25 09:41+0000\n"
 "Last-Translator: Jwtiyar Nariman <jwtiyar@gmail.com>\n"
-"Language-Team: Central Kurdish <https://hosted.weblate.org/projects/"
-"iso-codes/iso-3166-1/ckb/>\n"
+"Language-Team: Central Kurdish <https://hosted.weblate.org/projects/iso-"
+"codes/iso-3166-1/ckb/>\n"
 "Language: ckb\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
