--- a/messages/pt_BR/LC_MESSAGES/3166-2.po
+++ b/messages/pt_BR/LC_MESSAGES/3166-2.po
@@ -12,8 +12,8 @@ msgstr ""
 "POT-Creation-Date: 2020-05-19 14:57+0200\n"
 "PO-Revision-Date: 2020-12-23 17:30+0000\n"
 "Last-Translator: Rafael Fontenelle <rafaelff@gnome.org>\n"
-"Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/"
-"iso-codes/iso-3166-2/pt_BR/>\n"
+"Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/iso-"
+"codes/iso-3166-2/pt_BR/>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
