--- a/messages/pt_BR/LC_MESSAGES/639-2.po
+++ b/messages/pt_BR/LC_MESSAGES/639-2.po
@@ -17,8 +17,8 @@ msgstr ""
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
 "PO-Revision-Date: 2020-12-23 17:30+0000\n"
 "Last-Translator: Rafael Fontenelle <rafaelff@gnome.org>\n"
-"Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/"
-"iso-codes/iso-639-2/pt_BR/>\n"
+"Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/iso-"
+"codes/iso-639-2/pt_BR/>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
