--- a/messages/zh_CN/LC_MESSAGES/3166-1.po
+++ b/messages/zh_CN/LC_MESSAGES/3166-1.po
@@ -20,8 +20,8 @@ msgstr ""
 "POT-Creation-Date: 2019-03-20 13:20+0100\n"
 "PO-Revision-Date: 2020-10-15 06:09+0000\n"
 "Last-Translator: Boyuan Yang <073plan@gmail.com>\n"
-"Language-Team: Chinese (Simplified) <https://hosted.weblate.org/projects/"
-"iso-codes/iso-3166-1/zh_Hans/>\n"
+"Language-Team: Chinese (Simplified) <https://hosted.weblate.org/projects/iso-"
+"codes/iso-3166-1/zh_Hans/>\n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
