--- a/messages/fo/LC_MESSAGES/3166-1.po
+++ b/messages/fo/LC_MESSAGES/3166-1.po
@@ -6,23 +6,27 @@
 # .
 # Copyright ©
 # Alastair McKinstry <mckinstry@debian.org>, 2004.
+# Tummas Jóhan Sigvardsen <tummas@tummas.me>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_3166-1\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2019-03-20 13:20+0100\n"
-"PO-Revision-Date: 2004-08-08 10:00+0100\n"
-"Last-Translator: Alastair McKinstry <mckinstry@debian.org>\n"
-"Language-Team: Faroese\n"
+"PO-Revision-Date: 2021-03-17 19:18+0000\n"
+"Last-Translator: Tummas Jóhan Sigvardsen <tummas@tummas.me>\n"
+"Language-Team: Faroese <https://hosted.weblate.org/projects/iso-codes/"
+"iso-3166-1/fo/>\n"
 "Language: fo\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.5.2-dev\n"
 
 #. Name for ABW
 msgid "Aruba"
-msgstr ""
+msgstr "Aruba"
 
 #. Name for AFG
 msgid "Afghanistan"
@@ -34,7 +38,7 @@ msgstr ""
 
 #. Name for AGO
 msgid "Angola"
-msgstr ""
+msgstr "Angola"
 
 #. Official name for AGO
 msgid "Republic of Angola"
@@ -46,11 +50,11 @@ msgstr ""
 
 #. Name for ALA
 msgid "Åland Islands"
-msgstr ""
+msgstr "Áland"
 
 #. Name for ALB
 msgid "Albania"
-msgstr ""
+msgstr "Albania"
 
 #. Official name for ALB
 msgid "Republic of Albania"
@@ -58,7 +62,7 @@ msgstr ""
 
 #. Name for AND
 msgid "Andorra"
-msgstr ""
+msgstr "Andorra"
 
 #. Official name for AND
 msgid "Principality of Andorra"
@@ -66,11 +70,11 @@ msgstr ""
 
 #. Name for ARE
 msgid "United Arab Emirates"
-msgstr "Sameindu Emirríkini"
+msgstr "Sameindu arabisku emiratini"
 
 #. Name for ARG
 msgid "Argentina"
-msgstr ""
+msgstr "Argentina"
 
 #. Official name for ARG
 msgid "Argentine Republic"
@@ -78,7 +82,7 @@ msgstr ""
 
 #. Name for ARM
 msgid "Armenia"
-msgstr ""
+msgstr "Armenia"
 
 #. Official name for ARM
 msgid "Republic of Armenia"
@@ -86,7 +90,7 @@ msgstr ""
 
 #. Name for ASM
 msgid "American Samoa"
-msgstr ""
+msgstr "Sámoa"
 
 #. Name for ATA
 msgid "Antarctica"
@@ -138,7 +142,7 @@ msgstr ""
 
 #. Name for BEN
 msgid "Benin"
-msgstr ""
+msgstr "Benin"
 
 #. Official name for BEN
 msgid "Republic of Benin"
@@ -162,7 +166,7 @@ msgstr ""
 
 #. Name for BGR
 msgid "Bulgaria"
-msgstr ""
+msgstr "Bulgaria"
 
 #. Official name for BGR
 msgid "Republic of Bulgaria"
@@ -855,7 +859,7 @@ msgstr ""
 
 #. Name for LBY, Official name for LBY
 msgid "Libya"
-msgstr ""
+msgstr "Libya"
 
 #. Name for LCA
 msgid "Saint Lucia"
@@ -871,7 +875,7 @@ msgstr ""
 
 #. Name for LKA
 msgid "Sri Lanka"
-msgstr ""
+msgstr "Sri Lanka"
 
 #. Official name for LKA
 msgid "Democratic Socialist Republic of Sri Lanka"
@@ -1603,7 +1607,7 @@ msgstr "Sambandsríki Amerika"
 
 #. Official name for USA
 msgid "United States of America"
-msgstr ""
+msgstr "Sambandsríkini Amerika"
 
 #. Name for UZB
 msgid "Uzbekistan"
@@ -1615,7 +1619,7 @@ msgstr ""
 
 #. Name for VAT
 msgid "Holy See (Vatican City State)"
-msgstr ""
+msgstr "Vatikanríki"
 
 #. Name for VCT
 msgid "Saint Vincent and the Grenadines"
@@ -1660,7 +1664,7 @@ msgstr ""
 
 #. Common name for VNM
 msgid "Vietnam"
-msgstr ""
+msgstr "Vietnam"
 
 #. Name for VUT
 msgid "Vanuatu"
