--- a/messages/he/LC_MESSAGES/3166-2.po
+++ b/messages/he/LC_MESSAGES/3166-2.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2020-05-19 14:57+0200\n"
-"PO-Revision-Date: 2021-03-24 16:29+0000\n"
+"PO-Revision-Date: 2021-04-07 13:26+0000\n"
 "Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
 "Language-Team: Hebrew <https://hosted.weblate.org/projects/iso-codes/"
 "iso-3166-2/he/>\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n == 1) ? 0 : ((n == 2) ? 1 : ((n > 10 && "
 "n % 10 == 0) ? 2 : 3));\n"
-"X-Generator: Weblate 4.5.2-dev\n"
+"X-Generator: Weblate 4.6-dev\n"
 
 #. Name for AD-02
 msgid "Canillo"
@@ -10581,115 +10581,115 @@ msgstr "וג׳דה-אנגאד"
 
 #. Name for MA-OUZ
 msgid "Ouezzane"
-msgstr ""
+msgstr "וזאן"
 
 #. Name for MA-RAB
 msgid "Rabat"
-msgstr ""
+msgstr "רבאט"
 
 #. Name for MA-REH
 msgid "Rehamna"
-msgstr ""
+msgstr "רחאמנה"
 
 #. Name for MA-SAF, Name for MT-47
 msgid "Safi"
-msgstr ""
+msgstr "סאפי"
 
 #. Name for MA-SAL
 msgid "Salé"
-msgstr ""
+msgstr "סלא"
 
 #. Name for MA-SEF
 msgid "Sefrou"
-msgstr ""
+msgstr "צפרו"
 
 #. Name for MA-SET
 msgid "Settat"
-msgstr ""
+msgstr "סטאת"
 
 #. Name for MA-SIB
 msgid "Sidi Bennour"
-msgstr ""
+msgstr "סידי בנור"
 
 #. Name for MA-SIF
 msgid "Sidi Ifni"
-msgstr ""
+msgstr "סידי איפני"
 
 #. Name for MA-SIK
 msgid "Sidi Kacem"
-msgstr ""
+msgstr "סידי קאסם"
 
 #. Name for MA-SIL
 msgid "Sidi Slimane"
-msgstr ""
+msgstr "סידי סלימאן"
 
 #. Name for MA-SKH
 msgid "Skhirate-Témara"
-msgstr ""
+msgstr "צח׳יראת תמארה"
 
 #. Name for MA-TAF
 msgid "Tarfaya (EH-partial)"
-msgstr ""
+msgstr "טרפאיה (חלקית בסהרה המערבית)"
 
 #. Name for MA-TAI
 msgid "Taourirt"
-msgstr ""
+msgstr "תאורירת"
 
 #. Name for MA-TAO
 msgid "Taounate"
-msgstr ""
+msgstr "תאונאת"
 
 #. Name for MA-TAR
 msgid "Taroudant"
-msgstr ""
+msgstr "תרודאנת"
 
 #. Name for MA-TAT
 msgid "Tata"
-msgstr ""
+msgstr "טאטא"
 
 #. Name for MA-TAZ
 msgid "Taza"
-msgstr ""
+msgstr "תאזה"
 
 #. Name for MA-TET
 msgid "Tétouan"
-msgstr ""
+msgstr "תטואן"
 
 #. Name for MA-TIN
 msgid "Tinghir"
-msgstr ""
+msgstr "טינריר"
 
 #. Name for MA-TIZ
 msgid "Tiznit"
-msgstr ""
+msgstr "תיזנית"
 
 #. Name for MA-TNG
 msgid "Tanger-Assilah"
-msgstr ""
+msgstr "טנג׳יר-אצילה"
 
 #. Name for MA-TNT
 msgid "Tan-Tan (EH-partial)"
-msgstr ""
+msgstr "טאנטאן (חלקית בסהרה המערבית)"
 
 #. Name for MA-YUS
 msgid "Youssoufia"
-msgstr ""
+msgstr "יוסופיה"
 
 #. Name for MA-ZAG
 msgid "Zagora"
-msgstr ""
+msgstr "זאגורה"
 
 #. Name for MC-CL
 msgid "La Colle"
-msgstr ""
+msgstr "לה קול"
 
 #. Name for MC-CO
 msgid "La Condamine"
-msgstr ""
+msgstr "לה קונדמין"
 
 #. Name for MC-FO
 msgid "Fontvieille"
-msgstr ""
+msgstr "פונויל"
 
 #. Name for MC-GA
 msgid "La Gare"
@@ -10709,7 +10709,7 @@ msgstr ""
 
 #. Name for MC-MC
 msgid "Monte-Carlo"
-msgstr ""
+msgstr "מונטה קרלו"
 
 #. Name for MC-MG
 msgid "Moneghetti"
