--- a/messages/ia/LC_MESSAGES/15924.po
+++ b/messages/ia/LC_MESSAGES/15924.po
@@ -5,14 +5,14 @@
 # .
 # Copyright ©
 # Nik Kalach <nik.kalach@inbox.ru>, 2013.
-# Giovanni Sora <g.sora@tiscali.it>, 2019.
+# Giovanni Sora <g.sora@tiscali.it>, 2019, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_15924\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2019-03-04 20:57+0000\n"
+"PO-Revision-Date: 2021-04-14 21:27+0000\n"
 "Last-Translator: Giovanni Sora <g.sora@tiscali.it>\n"
 "Language-Team: Interlingua <https://hosted.weblate.org/projects/iso-codes/"
 "iso-15924/ia/>\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 3.5\n"
+"X-Generator: Weblate 4.6-dev\n"
 
 #. Name for Adlm
 msgid "Adlam"
@@ -452,7 +452,7 @@ msgstr "Mongolico"
 
 #. Name for Moon
 msgid "Moon (Moon code, Moon script, Moon type)"
-msgstr "Moon (codice Moon , scriptura Moon ,  typo Moon)"
+msgstr "Moon (codice Moon , scriptura Moon , typo Moon)"
 
 #. Name for Mroo
 #, fuzzy
