--- a/messages/tzm/LC_MESSAGES/15924.po
+++ b/messages/tzm/LC_MESSAGES/15924.po
@@ -4,31 +4,31 @@
 # This file is distributed under the same license as the iso-codes package.
 #
 # Copyright ©
-# Hakim Oubouali <hakim.oubouali.skr@gmail.com>, 2020.
+# Hakim Oubouali <hakim.oubouali.skr@gmail.com>, 2020, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_15924\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2020-10-17 03:27+0000\n"
+"PO-Revision-Date: 2021-04-30 13:31+0000\n"
 "Last-Translator: Hakim Oubouali <hakim.oubouali.skr@gmail.com>\n"
-"Language-Team: Central Atlas Tamazight <https://hosted.weblate.org/projects/"
-"iso-codes/iso-15924/tzm/>\n"
+"Language-Team: Tamazight (Central Atlas) <https://hosted.weblate.org/"
+"projects/iso-codes/iso-15924/tzm/>\n"
 "Language: tzm\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n >= 2 && (n < 11 || n > 99);\n"
-"X-Generator: Weblate 4.3.1-dev\n"
+"X-Generator: Weblate 4.7-dev\n"
 
 #. Name for Adlm
 msgid "Adlam"
-msgstr ""
+msgstr "Tadlamit"
 
 #. Name for Afak
 msgid "Afaka"
-msgstr ""
+msgstr "Tafakayt"
 
 #. Name for Aghb
 msgid "Caucasian Albanian"
@@ -72,11 +72,11 @@ msgstr ""
 
 #. Name for Batk
 msgid "Batak"
-msgstr ""
+msgstr "Tabatakit"
 
 #. Name for Beng
 msgid "Bengali"
-msgstr ""
+msgstr "Tabangalit"
 
 #. Name for Bhks
 msgid "Bhaiksuki"
@@ -92,7 +92,7 @@ msgstr ""
 
 #. Name for Brah
 msgid "Brahmi"
-msgstr ""
+msgstr "Tabrahmit"
 
 #. Name for Brai
 msgid "Braille"
